# rust-maths

./: Cargo.toml  README.org
src/: algebra.rs  lib.rs  sets.rs  topology.rs
src/algebra/: groupoid.rs  ringoid.rs
