[package]
name = "rust-maths"
version = "0.1.0"
edition = "2021"
authors = ["evf (eliseuv816@gmail.com)"]
keywords = ["maths", "algebra", "numeric"]
categories = ["mathematics", "science", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rand = "0.8.4"
